tests/tuple.err.out
error: tuple.err.li 2,10: mismatched types: `...(int, int)` (expected) and `int` (found)
    2 |   return 0
      |          ^
error: tuple.err.li 3,10: mismatched types: `...(int, int)` (expected) and `(string, string)` (found)
    3 |   return ('x', 'y')
      |          ^^^^^^^^^^
error: tuple.err.li 6,1: mismatched types: `int` (left) and `(int, int)` (pipe in of right)
    6 | 0 |> f()
      | ^^^^^^^^
error: tuple.err.li 10,3: expected 0 arguments, but got 1
   10 |   read(&v)
      |   ^^^^^^^^
error: tuple.err.li 14,1: mismatched types: `int` (left) and `()` (pipe in of right)
   14 | 0 |> zero()
      | ^^^^^^^^^^^
error: tuple.err.li 15,1: mismatched types: `(int, int)` (left) and `()` (pipe in of right)
   15 | (1, 2) |> zero()
      | ^^^^^^^^^^^^^^^^
error: tuple.err.li 17,1: mismatched types: `(int, int)` (left) and `int` (right)
   17 | (0, 0) == (1)
      | ^^^^^^^^^^^^^
error: tuple.err.li 18,1: mismatched types: `(int, int)` (left) and `(string, string)` (right)
   18 | (0, 0) == ('a', 'b')
      | ^^^^^^^^^^^^^^^^^^^^
error: tuple.err.li 19,1: invalid operation: `(int, int)` * `(int, int)`
   19 | (0, 0) * (0, 0)
      | ^^^^^^^^^^^^^^^
error: tuple.err.li 20,1: invalid operation: `(int, int)` / `(int, int)`
   20 | (0, 0) / (0, 0)
      | ^^^^^^^^^^^^^^^
error: tuple.err.li 21,1: mismatched types: `(int, int)` (left) and `int` (right)
   21 | (0, 1) + 2
      | ^^^^^^^^^^
error: tuple.err.li 23,9: cannot use variadic type as tuple element
   23 | var v: (...int)
      |         ^^^^^^
error: tuple.err.li 24,14: cannot use tuple as tuple element
   24 | var nested: ((int, int))
      |              ^^^^^^^^^^
